// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sdk/transferData ecosystem > asset 'usdcwh' from source 'Moonbeam' to destination 'Moonriver' > should get transfer data from Moonbeam to Moonriver with asset usdcwh 1`] = `
{
  "destination": {
    "balance": _AssetAmount {
      "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "id": 210223998887087232417477484708341610477n,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "whUSDC.mb",
    },
    "chain": _EvmParachain {
      "assets": Map {
        "aseed" => _ChainAsset {
          "address": "0xFfFffFFfa1B026a00FbAA67c86D5d1d5BF8D8228",
          "decimals": 12,
          "ids": {
            "id": "214920334981412447805621250067209749032",
          },
          "key": "aseed",
          "min": undefined,
          "originSymbol": "aSEED",
          "symbol": undefined,
        },
        "bnc" => _ChainAsset {
          "address": "0xFFfFFfFFF075423be54811EcB478e911F22dDe7D",
          "decimals": 12,
          "ids": {
            "id": "319623561105283008236062145480775032445",
          },
          "key": "bnc",
          "min": undefined,
          "originSymbol": "BNC",
          "symbol": "xcBNC",
        },
        "csm" => _ChainAsset {
          "address": "0xffFfFFFf519811215E05eFA24830Eebe9c43aCD7",
          "decimals": 12,
          "ids": {
            "id": "108457044225666871745333730479173774551",
          },
          "key": "csm",
          "min": undefined,
          "originSymbol": "CSM",
          "symbol": "xcCSM",
        },
        "kar" => _ChainAsset {
          "address": "0xFfFFFFfF08220AD2E6e157f26eD8bD22A336A0A5",
          "decimals": 12,
          "ids": {
            "id": "10810581592933651521121702237638664357",
          },
          "key": "kar",
          "min": undefined,
          "originSymbol": "KAR",
          "symbol": "xcKAR",
        },
        "kbtc" => _ChainAsset {
          "address": "0xFFFfFfFfF6E528AD57184579beeE00c5d5e646F0",
          "decimals": 8,
          "ids": {
            "id": "328179947973504579459046439826496046832",
          },
          "key": "kbtc",
          "min": undefined,
          "originSymbol": "KBTC",
          "symbol": "xcKBTC",
        },
        "kint" => _ChainAsset {
          "address": "0xfffFFFFF83F4f317d3cbF6EC6250AeC3697b3fF2",
          "decimals": 12,
          "ids": {
            "id": "175400718394635817552109270754364440562",
          },
          "key": "kint",
          "min": undefined,
          "originSymbol": "KINT",
          "symbol": "xcKINT",
        },
        "ksm" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 12,
          "ids": {
            "id": "42259045809535163221576417993425387648",
          },
          "key": "ksm",
          "min": undefined,
          "originSymbol": "KSM",
          "symbol": "xcKSM",
        },
        "lit" => _ChainAsset {
          "address": "0xfffFFfFF31103d490325BB0a8E40eF62e2F614C0",
          "decimals": 12,
          "ids": {
            "id": "65216491554813189869575508812319036608",
          },
          "key": "lit",
          "min": undefined,
          "originSymbol": "LIT",
          "symbol": "xcLIT",
        },
        "movr" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 10,
          },
          "key": "movr",
          "min": 10000000000000000n,
          "originSymbol": "MOVR",
          "symbol": undefined,
        },
        "pha" => _ChainAsset {
          "address": "0xffFfFFff8E6b63d9e447B6d4C45BDA8AF9dc9603",
          "decimals": 12,
          "ids": {
            "id": "189307976387032586987344677431204943363",
          },
          "key": "pha",
          "min": undefined,
          "originSymbol": "PHA",
          "symbol": "xcPHA",
        },
        "pica" => _ChainAsset {
          "address": "0xFffFfFFf7dD9B9C60ac83e49D7E3E1f7A1370aD2",
          "decimals": 12,
          "ids": {
            "id": "167283995827706324502761431814209211090",
          },
          "key": "pica",
          "min": undefined,
          "originSymbol": "PICA",
          "symbol": "xcPICA",
        },
        "rmrk" => _ChainAsset {
          "address": "0xffffffFF893264794d9d57E1E0E21E0042aF5A0A",
          "decimals": 10,
          "ids": {
            "id": "182365888117048807484804376330534607370",
          },
          "key": "rmrk",
          "min": undefined,
          "originSymbol": "RMRK",
          "symbol": "xcRMRK",
        },
        "sdn" => _ChainAsset {
          "address": "0xFFFfffFF0Ca324C842330521525E7De111F38972",
          "decimals": 18,
          "ids": {
            "id": "16797826370226091782818345603793389938",
          },
          "key": "sdn",
          "min": undefined,
          "originSymbol": "SDN",
          "symbol": "xcSDN",
        },
        "teer" => _ChainAsset {
          "address": "0xFfFfffFf4F0CD46769550E5938F6beE2F5d4ef1e",
          "decimals": 12,
          "ids": {
            "id": "105075627293246237499203909093923548958",
          },
          "key": "teer",
          "min": undefined,
          "originSymbol": "TEER",
          "symbol": "xcTEER",
        },
        "tnkr" => _ChainAsset {
          "address": "0xfFFfFffF683474B842852111cc31d470bD8f5081",
          "decimals": 12,
          "ids": {
            "id": "138512078356357941985706694377215053953",
          },
          "key": "tnkr",
          "min": undefined,
          "originSymbol": "TNKR",
          "symbol": "xcTNKR",
        },
        "tur" => _ChainAsset {
          "address": "0xfFffffFf6448d0746f2a66342B67ef9CAf89478E",
          "decimals": 10,
          "ids": {
            "id": "133300872918374599700079037156071917454",
          },
          "key": "tur",
          "min": undefined,
          "originSymbol": "TUR",
          "symbol": "xcTUR",
        },
        "usdtksm" => _ChainAsset {
          "address": "0xFFFFFFfFea09FB06d082fd1275CD48b191cbCD1d",
          "decimals": 6,
          "ids": {
            "id": "311091173110107856861649819128533077277",
          },
          "key": "usdtksm",
          "min": undefined,
          "originSymbol": "USDT",
          "symbol": "xcUSDT",
        },
        "xrt" => _ChainAsset {
          "address": "0xFffFFffF51470Dca3dbe535bD2880a9CcDBc6Bd9",
          "decimals": 9,
          "ids": {
            "id": "108036400430056508975016746969135344601",
          },
          "key": "xrt",
          "min": undefined,
          "originSymbol": "XRT",
          "symbol": "xcXRT",
        },
        "vbnc" => _ChainAsset {
          "address": "0xFFffffff3646A00f78caDf8883c5A2791BfCDdc4",
          "decimals": 12,
          "ids": {
            "id": "72145018963825376852137222787619937732",
          },
          "key": "vbnc",
          "min": undefined,
          "originSymbol": "vBNC",
          "symbol": "xcvBNC",
        },
        "vksm" => _ChainAsset {
          "address": "0xFFffffFFC6DEec7Fc8B11A2C8ddE9a59F8c62EFe",
          "decimals": 12,
          "ids": {
            "id": "264344629840762281112027368930249420542",
          },
          "key": "vksm",
          "min": undefined,
          "originSymbol": "vKSM",
          "symbol": "xcvKSM",
        },
        "vmovr" => _ChainAsset {
          "address": "0xfFfffFfF98e37bF6a393504b5aDC5B53B4D0ba11",
          "decimals": 18,
          "ids": {
            "id": "203223821023327994093278529517083736593",
          },
          "key": "vmovr",
          "min": undefined,
          "originSymbol": "vMOVR",
          "symbol": "xcvMOVR",
        },
        "glmr" => _ChainAsset {
          "address": "0xFfFffFff1a49463978f19dfD6983f2fa1885C254",
          "decimals": 18,
          "ids": {
            "id": 34940389883188672429634411751708934740n,
          },
          "key": "glmr",
          "min": undefined,
          "originSymbol": "GLMR",
          "symbol": "GLMR.mb",
        },
        "usdc" => _ChainAsset {
          "address": "0xFFFFFFfF2215880E56fe63a96E54E073757C3092",
          "decimals": 6,
          "ids": {
            "id": 45305549634539991528356533909445161106n,
          },
          "key": "usdc",
          "min": undefined,
          "originSymbol": "USDC",
          "symbol": "xcUSDC.mb",
        },
        "usdcwh" => _ChainAsset {
          "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
          "decimals": 6,
          "ids": {
            "id": 210223998887087232417477484708341610477n,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": "whUSDC.mb",
        },
        "usdt" => _ChainAsset {
          "address": "0xFFFFFFFFc70260a3bf46A91cF87B6F5e6Abba712",
          "decimals": 6,
          "ids": {
            "id": 264528715839624829046161791069655377682n,
          },
          "key": "usdt",
          "min": undefined,
          "originSymbol": "USDT",
          "symbol": "xcUSDT.mb",
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": {
        "Batch": "0x0000000000000000000000000000000000000808",
        "XcmPrecompile": "0x000000000000000000000000000000000000081A",
        "XcmUtils": "0x000000000000000000000000000000000000080C",
      },
      "ecosystem": "kusama",
      "explorer": undefined,
      "genesisHash": "0x401a1f9dca3da46f5c4091016c8a2f26dcea05865116b286f60f668207d1474b",
      "id": 1285,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": false,
      "key": "moonriver",
      "name": "Moonriver",
      "parachainId": 2023,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonriver.moonbeam.network",
      "ss58Format": 1285,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": undefined,
      "ws": [
        "wss://wss.api.moonriver.moonbeam.network",
      ],
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "movr",
      "min": 10000000000000000n,
      "originSymbol": "MOVR",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
      "amount": 21450n,
      "decimals": 6,
      "ids": {
        "id": 210223998887087232417477484708341610477n,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "whUSDC.mb",
    },
    "min": _AssetAmount {
      "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "id": 210223998887087232417477484708341610477n,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "whUSDC.mb",
    },
    "sovereignAccountBalances": undefined,
  },
  "getEstimate": [Function],
  "max": _AssetAmount {
    "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
    "amount": 0n,
    "decimals": 6,
    "ids": {
      "palletInstance": 110,
    },
    "key": "usdcwh",
    "min": undefined,
    "originSymbol": "USDC.Wh",
    "symbol": "USDC",
  },
  "min": _AssetAmount {
    "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
    "amount": 21450n,
    "decimals": 6,
    "ids": {
      "id": 210223998887087232417477484708341610477n,
    },
    "key": "usdcwh",
    "min": undefined,
    "originSymbol": "USDC.Wh",
    "symbol": "whUSDC.mb",
  },
  "source": {
    "balance": _AssetAmount {
      "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "palletInstance": 110,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "USDC",
    },
    "chain": _EvmParachain {
      "assets": Map {
        "aca" => _ChainAsset {
          "address": "0xffffFFffa922Fef94566104a6e5A35a4fCDDAA9f",
          "decimals": 12,
          "ids": {
            "id": "224821240862170613278369189818311486111",
          },
          "key": "aca",
          "min": undefined,
          "originSymbol": "ACA",
          "symbol": "xcACA",
        },
        "astr" => _ChainAsset {
          "address": "0xFfFFFfffA893AD19e540E172C10d78D4d479B5Cf",
          "decimals": 18,
          "ids": {
            "id": "224077081838586484055667086558292981199",
          },
          "key": "astr",
          "min": undefined,
          "originSymbol": "ASTR",
          "symbol": "xcASTR",
        },
        "aseed" => _ChainAsset {
          "address": "0xfFfFFFFF52C56A9257bB97f4B2b6F7B2D624ecda",
          "decimals": 12,
          "ids": {
            "id": "110021739665376159354538090254163045594",
          },
          "key": "aseed",
          "min": undefined,
          "originSymbol": "aSEED",
          "symbol": undefined,
        },
        "axlusdc" => _ChainAsset {
          "address": "0xCa01a1D0993565291051daFF390892518ACfAD3A",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "axlusdc",
          "min": undefined,
          "originSymbol": "axlUSDC",
          "symbol": undefined,
        },
        "bnc" => _ChainAsset {
          "address": "0xFFffffFf7cC06abdF7201b350A1265c62C8601d2",
          "decimals": 12,
          "ids": {
            "id": "165823357460190568952172802245839421906",
          },
          "key": "bnc",
          "min": undefined,
          "originSymbol": "BNC",
          "symbol": "xcBNC",
        },
        "cfg" => _ChainAsset {
          "address": "0xFFfFfFff44bD9D2FFEE20B25D1Cf9E78Edb6Eae3",
          "decimals": 18,
          "ids": {
            "id": "91372035960551235635465443179559840483",
          },
          "key": "cfg",
          "min": undefined,
          "originSymbol": "CFG",
          "symbol": "xcCFG",
        },
        "dai" => _ChainAsset {
          "address": "0x06e605775296e851FF43b4dAa541Bb0984E9D6fD",
          "decimals": 18,
          "ids": {
            "palletInstance": 110,
          },
          "key": "dai",
          "min": undefined,
          "originSymbol": "DAI",
          "symbol": undefined,
        },
        "ded" => _ChainAsset {
          "address": "0xfFffFFFf5da2d7214D268375cf8fb1715705FdC6",
          "decimals": 10,
          "ids": {
            "id": "124463719055550872076363892993240202694",
          },
          "key": "ded",
          "min": undefined,
          "originSymbol": "DED",
          "symbol": "xcDED",
        },
        "dot" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 10,
          "ids": {
            "id": "42259045809535163221576417993425387648",
          },
          "key": "dot",
          "min": undefined,
          "originSymbol": "DOT",
          "symbol": "xcDOT",
        },
        "eq" => _ChainAsset {
          "address": "0xFffFFfFf8f6267e040D8a0638C576dfBa4F0F6D6",
          "decimals": 9,
          "ids": {
            "id": "190590555344745888270686124937537713878",
          },
          "key": "eq",
          "min": undefined,
          "originSymbol": "EQ",
          "symbol": "xcEQ",
        },
        "eqd" => _ChainAsset {
          "address": "0xFFffFfFF8cdA1707bAF23834d211B08726B1E499",
          "decimals": 9,
          "ids": {
            "id": "187224307232923873519830480073807488153",
          },
          "key": "eqd",
          "min": undefined,
          "originSymbol": "EQD",
          "symbol": "xcEQD",
        },
        "fil" => _ChainAsset {
          "address": "0xfFFfFFFF6C57e17D210DF507c82807149fFd70B2",
          "decimals": 18,
          "ids": {
            "id": "144012926827374458669278577633504620722",
          },
          "key": "fil",
          "min": undefined,
          "originSymbol": "FIL",
          "symbol": "xcFIL",
        },
        "glmr" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 10,
          },
          "key": "glmr",
          "min": 100000000000000000n,
          "originSymbol": "GLMR",
          "symbol": undefined,
        },
        "hdx" => _ChainAsset {
          "address": "0xFFFfFfff345Dc44DDAE98Df024Eb494321E73FcC",
          "decimals": 12,
          "ids": {
            "id": "69606720909260275826784788104880799692",
          },
          "key": "hdx",
          "min": undefined,
          "originSymbol": "HDX",
          "symbol": "xcHDX",
        },
        "ibtc" => _ChainAsset {
          "address": "0xFFFFFfFf5AC1f9A51A93F5C527385edF7Fe98A52",
          "decimals": 8,
          "ids": {
            "id": "120637696315203257380661607956669368914",
          },
          "key": "ibtc",
          "min": undefined,
          "originSymbol": "IBTC",
          "symbol": "xcIBTC",
        },
        "intr" => _ChainAsset {
          "address": "0xFffFFFFF4C1cbCd97597339702436d4F18a375Ab",
          "decimals": 10,
          "ids": {
            "id": "101170542313601871197860408087030232491",
          },
          "key": "intr",
          "min": undefined,
          "originSymbol": "INTR",
          "symbol": "xcINTR",
        },
        "ldot" => _ChainAsset {
          "address": "0xFFfFfFffA9cfFfa9834235Fe53f4733F1b8B28d4",
          "decimals": 10,
          "ids": {
            "id": "225719522181998468294117309041779353812",
          },
          "key": "ldot",
          "min": undefined,
          "originSymbol": "LDOT",
          "symbol": "xcLDOT",
        },
        "manta" => _ChainAsset {
          "address": "0xfFFffFFf7D3875460d4509eb8d0362c611B4E841",
          "decimals": 18,
          "ids": {
            "id": "166446646689194205559791995948102903873",
          },
          "key": "manta",
          "min": undefined,
          "originSymbol": "MANTA",
          "symbol": "xcMANTA",
        },
        "nodl" => _ChainAsset {
          "address": "0xfffffffFe896ba7Cb118b9Fa571c6dC0a99dEfF1",
          "decimals": 11,
          "ids": {
            "id": "309163521958167876851250718453738106865",
          },
          "key": "nodl",
          "min": undefined,
          "originSymbol": "NODL",
          "symbol": "xcNODL",
        },
        "neuro" => _ChainAsset {
          "address": "0xFfffffFfB3229c8E7657eABEA704d5e75246e544",
          "decimals": 12,
          "ids": {
            "id": "238111524681612888331172110363070489924",
          },
          "key": "neuro",
          "min": undefined,
          "originSymbol": "NEURO",
          "symbol": "xcNEURO",
        },
        "peaq" => _ChainAsset {
          "address": "0xFffFFFFFEC4908b74688a01374f789B48E9a3eab",
          "decimals": 18,
          "ids": {
            "id": "314077021455772878282433861213184736939",
          },
          "key": "peaq",
          "min": undefined,
          "originSymbol": "PEAQ",
          "symbol": "xcPEAQ",
        },
        "pha" => _ChainAsset {
          "address": "0xFFFfFfFf63d24eCc8eB8a7b5D0803e900F7b6cED",
          "decimals": 12,
          "ids": {
            "id": "132685552157663328694213725410064821485",
          },
          "key": "pha",
          "min": undefined,
          "originSymbol": "PHA",
          "symbol": "xcPHA",
        },
        "pen" => _ChainAsset {
          "address": "0xffFFfFFf2257622F345E1ACDe0D4f46D7d1D77D0",
          "decimals": 12,
          "ids": {
            "id": "45647473099451451833602657905356404688",
          },
          "key": "pen",
          "min": undefined,
          "originSymbol": "PEN",
          "symbol": "xcPEN",
        },
        "ring" => _ChainAsset {
          "address": "0xFfffFfff5e90e365eDcA87fB4c8306Df1E91464f",
          "decimals": 18,
          "ids": {
            "id": "125699734534028342599692732320197985871",
          },
          "key": "ring",
          "min": undefined,
          "originSymbol": "RING",
          "symbol": "xcRING",
        },
        "sub" => _ChainAsset {
          "address": "0xfFfFffFf43B4560Bc0C451a3386E082bff50aC90",
          "decimals": 10,
          "ids": {
            "id": "89994634370519791027168048838578580624",
          },
          "key": "sub",
          "min": undefined,
          "originSymbol": "SUB",
          "symbol": undefined,
        },
        "usdc" => _ChainAsset {
          "address": "0xFFfffffF7D2B0B761Af01Ca8e25242976ac0aD7D",
          "decimals": 6,
          "ids": {
            "id": "166377000701797186346254371275954761085",
            "palletInstance": 110,
          },
          "key": "usdc",
          "min": undefined,
          "originSymbol": "USDC",
          "symbol": "xcUSDC",
        },
        "usdcwh" => _ChainAsset {
          "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": "USDC",
        },
        "usdtwh" => _ChainAsset {
          "address": "0xc30E9cA94CF52f3Bf5692aaCF81353a27052c46f",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "usdtwh",
          "min": undefined,
          "originSymbol": "USDT.Wh",
          "symbol": undefined,
        },
        "usdt" => _ChainAsset {
          "address": "0xFFFFFFfFea09FB06d082fd1275CD48b191cbCD1d",
          "decimals": 6,
          "ids": {
            "id": "311091173110107856861649819128533077277",
            "palletInstance": 110,
          },
          "key": "usdt",
          "min": undefined,
          "originSymbol": "USDT",
          "symbol": "xcUSDT",
        },
        "vastr" => _ChainAsset {
          "address": "0xFffFffff55C732C47639231a4C4373245763d26E",
          "decimals": 18,
          "ids": {
            "id": "114018676402354620972806895487280206446",
          },
          "key": "vastr",
          "min": undefined,
          "originSymbol": "vASTR",
          "symbol": "xcvASTR",
        },
        "vdot" => _ChainAsset {
          "address": "0xFFFfffFf15e1b7E3dF971DD813Bc394deB899aBf",
          "decimals": 10,
          "ids": {
            "id": "29085784439601774464560083082574142143",
          },
          "key": "vdot",
          "min": undefined,
          "originSymbol": "vDOT",
          "symbol": "xcvDOT",
        },
        "vfil" => _ChainAsset {
          "address": "0xFffffFffCd0aD0EA6576B7b285295c85E94cf4c1",
          "decimals": 18,
          "ids": {
            "id": "272547899416482196831721420898811311297",
          },
          "key": "vfil",
          "min": undefined,
          "originSymbol": "vFIL",
          "symbol": "xcvFIL",
        },
        "vglmr" => _ChainAsset {
          "address": "0xFfFfFFff99dABE1a8De0EA22bAa6FD48fdE96F6c",
          "decimals": 18,
          "ids": {
            "id": "204507659831918931608354793288110796652",
          },
          "key": "vglmr",
          "min": undefined,
          "originSymbol": "vGLMR",
          "symbol": "xcvGLMR",
        },
        "vmanta" => _ChainAsset {
          "address": "0xFFfFFfFfdA2a05FB50e7ae99275F4341AEd43379",
          "decimals": 18,
          "ids": {
            "id": "289989900872525819559124583375550296953",
          },
          "key": "vmanta",
          "min": undefined,
          "originSymbol": "vMANTA",
          "symbol": "xcvMANTA",
        },
        "wbtc" => _ChainAsset {
          "address": "0xE57eBd2d67B462E9926e04a8e33f01cD0D64346D",
          "decimals": 8,
          "ids": {
            "palletInstance": 110,
          },
          "key": "wbtc",
          "min": undefined,
          "originSymbol": "WBTC",
          "symbol": undefined,
        },
        "weth" => _ChainAsset {
          "address": "0xab3f0245B83feB11d15AAffeFD7AD465a59817eD",
          "decimals": 18,
          "ids": {
            "palletInstance": 110,
          },
          "key": "weth",
          "min": undefined,
          "originSymbol": "WETH",
          "symbol": undefined,
        },
        "ztg" => _ChainAsset {
          "address": "0xFFFFfffF71815ab6142E0E20c7259126C6B40612",
          "decimals": 10,
          "ids": {
            "id": "150874409661081770150564009349448205842",
          },
          "key": "ztg",
          "min": undefined,
          "originSymbol": "ZTG",
          "symbol": "xcZTG",
        },
        "pink" => _ChainAsset {
          "address": "0xfFfFFfFf30478fAFBE935e466da114E14fB3563d",
          "decimals": 10,
          "ids": {
            "id": "64174511183114006009298114091987195453",
          },
          "key": "pink",
          "min": undefined,
          "originSymbol": "PINK",
          "symbol": "xcPINK",
        },
        "stink" => _ChainAsset {
          "address": "0xFffFffFf54c556bD1d0F64ec6c78f1B477525E56",
          "decimals": 10,
          "ids": {
            "id": "112679793397406599376365943185137098326",
          },
          "key": "stink",
          "min": undefined,
          "originSymbol": "STINK",
          "symbol": "xcSTINK",
        },
        "apillon" => _ChainAsset {
          "address": "0xFfFFfFfF8A9736B44EbF188972725bED67BF694E",
          "decimals": 18,
          "ids": {
            "id": "184218609779515850660274730699350567246",
          },
          "key": "apillon",
          "min": undefined,
          "originSymbol": "NCTR",
          "symbol": "xcNCTR",
        },
        "wifd" => _ChainAsset {
          "address": "0xfffffffF2e1D1ac9eA1686255bEfe995B31abc96",
          "decimals": 10,
          "ids": {
            "id": "61295607754960722617854661686514597014",
          },
          "key": "wifd",
          "min": undefined,
          "originSymbol": "WIFD",
          "symbol": "xcWIFD",
        },
        "wbtce" => _ChainAsset {
          "address": "0xfFffFFFf1B4Bb1ac5749F73D866FfC91a3432c47",
          "decimals": 8,
          "ids": {
            "id": "36282181791341254438422467838694599751",
          },
          "key": "wbtce",
          "min": undefined,
          "originSymbol": "WBTC.e",
          "symbol": undefined,
        },
        "wethe" => _ChainAsset {
          "address": "0xFFffFFfF86829AFE1521ad2296719Df3acE8DEd7",
          "decimals": 18,
          "ids": {
            "id": "178794693648360392906933130845919698647",
          },
          "key": "wethe",
          "min": undefined,
          "originSymbol": "WETH.e",
          "symbol": undefined,
        },
        "wstethe" => _ChainAsset {
          "address": "0xfFFFFFFf5d5Deb44bf7278dEE5381Beb24CB6573",
          "decimals": 18,
          "ids": {
            "id": "124105859028862849477017063633156007283",
          },
          "key": "wstethe",
          "min": undefined,
          "originSymbol": "wstETH.e",
          "symbol": undefined,
        },
        "laos" => _ChainAsset {
          "address": "0xfffFFffFdd704e8e824a5EEc47de88f5B9e13588",
          "decimals": 18,
          "ids": {
            "id": "294342517635293430510451841925413680520",
          },
          "key": "laos",
          "min": undefined,
          "originSymbol": "LAOS",
          "symbol": "xcLAOS",
        },
        "eurc" => _ChainAsset {
          "address": "0xFfFfffFfa608Ec1332131289cBD8A97a0bB3D90F",
          "decimals": 12,
          "ids": {
            "id": "220698173844663170714431919474506717455",
          },
          "key": "eurc",
          "min": undefined,
          "originSymbol": "EURC",
          "symbol": "xcEURC.s",
        },
        "movr" => _ChainAsset {
          "address": "0xFfffFffF54c47F43713fd9211724362697f1a302",
          "decimals": 18,
          "ids": {
            "id": 112675423039561305557350799263187182338n,
          },
          "key": "movr",
          "min": undefined,
          "originSymbol": "MOVR",
          "symbol": "MOVR.mr",
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "polkadot",
      "explorer": {
        "base": "https://moonbeam.moonscan.io",
        "txPath": "/tx",
      },
      "genesisHash": "0xfe58ea77779b7abda7da4ec526d14db9b1e9cd40a217c34892af80a9b332b76d",
      "id": 1284,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": false,
      "key": "moonbeam",
      "name": "Moonbeam",
      "parachainId": 2004,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonbeam.network",
      "ss58Format": 1284,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": {
        "name": "Moonbeam",
      },
      "ws": [
        "wss://wss.api.moonbeam.network",
      ],
    },
    "destinationFee": _AssetAmount {
      "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
      "amount": 21450n,
      "decimals": 6,
      "ids": {
        "palletInstance": 110,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "USDC",
    },
    "destinationFeeBalance": _AssetAmount {
      "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "palletInstance": 110,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "USDC",
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "feeBalance": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 1330000000000000000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "max": _AssetAmount {
      "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "palletInstance": 110,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "USDC",
    },
    "min": _AssetAmount {
      "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "palletInstance": 110,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "USDC",
    },
  },
  "transfer": [Function],
}
`;

exports[`sdk/transferData ecosystem > asset 'usdcwh' from source 'Moonriver' to destination 'Moonbeam' > should get transfer data from Moonriver to Moonbeam with asset usdcwh 1`] = `
{
  "destination": {
    "balance": _AssetAmount {
      "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "palletInstance": 110,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "USDC",
    },
    "chain": _EvmParachain {
      "assets": Map {
        "aca" => _ChainAsset {
          "address": "0xffffFFffa922Fef94566104a6e5A35a4fCDDAA9f",
          "decimals": 12,
          "ids": {
            "id": "224821240862170613278369189818311486111",
          },
          "key": "aca",
          "min": undefined,
          "originSymbol": "ACA",
          "symbol": "xcACA",
        },
        "astr" => _ChainAsset {
          "address": "0xFfFFFfffA893AD19e540E172C10d78D4d479B5Cf",
          "decimals": 18,
          "ids": {
            "id": "224077081838586484055667086558292981199",
          },
          "key": "astr",
          "min": undefined,
          "originSymbol": "ASTR",
          "symbol": "xcASTR",
        },
        "aseed" => _ChainAsset {
          "address": "0xfFfFFFFF52C56A9257bB97f4B2b6F7B2D624ecda",
          "decimals": 12,
          "ids": {
            "id": "110021739665376159354538090254163045594",
          },
          "key": "aseed",
          "min": undefined,
          "originSymbol": "aSEED",
          "symbol": undefined,
        },
        "axlusdc" => _ChainAsset {
          "address": "0xCa01a1D0993565291051daFF390892518ACfAD3A",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "axlusdc",
          "min": undefined,
          "originSymbol": "axlUSDC",
          "symbol": undefined,
        },
        "bnc" => _ChainAsset {
          "address": "0xFFffffFf7cC06abdF7201b350A1265c62C8601d2",
          "decimals": 12,
          "ids": {
            "id": "165823357460190568952172802245839421906",
          },
          "key": "bnc",
          "min": undefined,
          "originSymbol": "BNC",
          "symbol": "xcBNC",
        },
        "cfg" => _ChainAsset {
          "address": "0xFFfFfFff44bD9D2FFEE20B25D1Cf9E78Edb6Eae3",
          "decimals": 18,
          "ids": {
            "id": "91372035960551235635465443179559840483",
          },
          "key": "cfg",
          "min": undefined,
          "originSymbol": "CFG",
          "symbol": "xcCFG",
        },
        "dai" => _ChainAsset {
          "address": "0x06e605775296e851FF43b4dAa541Bb0984E9D6fD",
          "decimals": 18,
          "ids": {
            "palletInstance": 110,
          },
          "key": "dai",
          "min": undefined,
          "originSymbol": "DAI",
          "symbol": undefined,
        },
        "ded" => _ChainAsset {
          "address": "0xfFffFFFf5da2d7214D268375cf8fb1715705FdC6",
          "decimals": 10,
          "ids": {
            "id": "124463719055550872076363892993240202694",
          },
          "key": "ded",
          "min": undefined,
          "originSymbol": "DED",
          "symbol": "xcDED",
        },
        "dot" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 10,
          "ids": {
            "id": "42259045809535163221576417993425387648",
          },
          "key": "dot",
          "min": undefined,
          "originSymbol": "DOT",
          "symbol": "xcDOT",
        },
        "eq" => _ChainAsset {
          "address": "0xFffFFfFf8f6267e040D8a0638C576dfBa4F0F6D6",
          "decimals": 9,
          "ids": {
            "id": "190590555344745888270686124937537713878",
          },
          "key": "eq",
          "min": undefined,
          "originSymbol": "EQ",
          "symbol": "xcEQ",
        },
        "eqd" => _ChainAsset {
          "address": "0xFFffFfFF8cdA1707bAF23834d211B08726B1E499",
          "decimals": 9,
          "ids": {
            "id": "187224307232923873519830480073807488153",
          },
          "key": "eqd",
          "min": undefined,
          "originSymbol": "EQD",
          "symbol": "xcEQD",
        },
        "fil" => _ChainAsset {
          "address": "0xfFFfFFFF6C57e17D210DF507c82807149fFd70B2",
          "decimals": 18,
          "ids": {
            "id": "144012926827374458669278577633504620722",
          },
          "key": "fil",
          "min": undefined,
          "originSymbol": "FIL",
          "symbol": "xcFIL",
        },
        "glmr" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 10,
          },
          "key": "glmr",
          "min": 100000000000000000n,
          "originSymbol": "GLMR",
          "symbol": undefined,
        },
        "hdx" => _ChainAsset {
          "address": "0xFFFfFfff345Dc44DDAE98Df024Eb494321E73FcC",
          "decimals": 12,
          "ids": {
            "id": "69606720909260275826784788104880799692",
          },
          "key": "hdx",
          "min": undefined,
          "originSymbol": "HDX",
          "symbol": "xcHDX",
        },
        "ibtc" => _ChainAsset {
          "address": "0xFFFFFfFf5AC1f9A51A93F5C527385edF7Fe98A52",
          "decimals": 8,
          "ids": {
            "id": "120637696315203257380661607956669368914",
          },
          "key": "ibtc",
          "min": undefined,
          "originSymbol": "IBTC",
          "symbol": "xcIBTC",
        },
        "intr" => _ChainAsset {
          "address": "0xFffFFFFF4C1cbCd97597339702436d4F18a375Ab",
          "decimals": 10,
          "ids": {
            "id": "101170542313601871197860408087030232491",
          },
          "key": "intr",
          "min": undefined,
          "originSymbol": "INTR",
          "symbol": "xcINTR",
        },
        "ldot" => _ChainAsset {
          "address": "0xFFfFfFffA9cfFfa9834235Fe53f4733F1b8B28d4",
          "decimals": 10,
          "ids": {
            "id": "225719522181998468294117309041779353812",
          },
          "key": "ldot",
          "min": undefined,
          "originSymbol": "LDOT",
          "symbol": "xcLDOT",
        },
        "manta" => _ChainAsset {
          "address": "0xfFFffFFf7D3875460d4509eb8d0362c611B4E841",
          "decimals": 18,
          "ids": {
            "id": "166446646689194205559791995948102903873",
          },
          "key": "manta",
          "min": undefined,
          "originSymbol": "MANTA",
          "symbol": "xcMANTA",
        },
        "nodl" => _ChainAsset {
          "address": "0xfffffffFe896ba7Cb118b9Fa571c6dC0a99dEfF1",
          "decimals": 11,
          "ids": {
            "id": "309163521958167876851250718453738106865",
          },
          "key": "nodl",
          "min": undefined,
          "originSymbol": "NODL",
          "symbol": "xcNODL",
        },
        "neuro" => _ChainAsset {
          "address": "0xFfffffFfB3229c8E7657eABEA704d5e75246e544",
          "decimals": 12,
          "ids": {
            "id": "238111524681612888331172110363070489924",
          },
          "key": "neuro",
          "min": undefined,
          "originSymbol": "NEURO",
          "symbol": "xcNEURO",
        },
        "peaq" => _ChainAsset {
          "address": "0xFffFFFFFEC4908b74688a01374f789B48E9a3eab",
          "decimals": 18,
          "ids": {
            "id": "314077021455772878282433861213184736939",
          },
          "key": "peaq",
          "min": undefined,
          "originSymbol": "PEAQ",
          "symbol": "xcPEAQ",
        },
        "pha" => _ChainAsset {
          "address": "0xFFFfFfFf63d24eCc8eB8a7b5D0803e900F7b6cED",
          "decimals": 12,
          "ids": {
            "id": "132685552157663328694213725410064821485",
          },
          "key": "pha",
          "min": undefined,
          "originSymbol": "PHA",
          "symbol": "xcPHA",
        },
        "pen" => _ChainAsset {
          "address": "0xffFFfFFf2257622F345E1ACDe0D4f46D7d1D77D0",
          "decimals": 12,
          "ids": {
            "id": "45647473099451451833602657905356404688",
          },
          "key": "pen",
          "min": undefined,
          "originSymbol": "PEN",
          "symbol": "xcPEN",
        },
        "ring" => _ChainAsset {
          "address": "0xFfffFfff5e90e365eDcA87fB4c8306Df1E91464f",
          "decimals": 18,
          "ids": {
            "id": "125699734534028342599692732320197985871",
          },
          "key": "ring",
          "min": undefined,
          "originSymbol": "RING",
          "symbol": "xcRING",
        },
        "sub" => _ChainAsset {
          "address": "0xfFfFffFf43B4560Bc0C451a3386E082bff50aC90",
          "decimals": 10,
          "ids": {
            "id": "89994634370519791027168048838578580624",
          },
          "key": "sub",
          "min": undefined,
          "originSymbol": "SUB",
          "symbol": undefined,
        },
        "usdc" => _ChainAsset {
          "address": "0xFFfffffF7D2B0B761Af01Ca8e25242976ac0aD7D",
          "decimals": 6,
          "ids": {
            "id": "166377000701797186346254371275954761085",
            "palletInstance": 110,
          },
          "key": "usdc",
          "min": undefined,
          "originSymbol": "USDC",
          "symbol": "xcUSDC",
        },
        "usdcwh" => _ChainAsset {
          "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": "USDC",
        },
        "usdtwh" => _ChainAsset {
          "address": "0xc30E9cA94CF52f3Bf5692aaCF81353a27052c46f",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "usdtwh",
          "min": undefined,
          "originSymbol": "USDT.Wh",
          "symbol": undefined,
        },
        "usdt" => _ChainAsset {
          "address": "0xFFFFFFfFea09FB06d082fd1275CD48b191cbCD1d",
          "decimals": 6,
          "ids": {
            "id": "311091173110107856861649819128533077277",
            "palletInstance": 110,
          },
          "key": "usdt",
          "min": undefined,
          "originSymbol": "USDT",
          "symbol": "xcUSDT",
        },
        "vastr" => _ChainAsset {
          "address": "0xFffFffff55C732C47639231a4C4373245763d26E",
          "decimals": 18,
          "ids": {
            "id": "114018676402354620972806895487280206446",
          },
          "key": "vastr",
          "min": undefined,
          "originSymbol": "vASTR",
          "symbol": "xcvASTR",
        },
        "vdot" => _ChainAsset {
          "address": "0xFFFfffFf15e1b7E3dF971DD813Bc394deB899aBf",
          "decimals": 10,
          "ids": {
            "id": "29085784439601774464560083082574142143",
          },
          "key": "vdot",
          "min": undefined,
          "originSymbol": "vDOT",
          "symbol": "xcvDOT",
        },
        "vfil" => _ChainAsset {
          "address": "0xFffffFffCd0aD0EA6576B7b285295c85E94cf4c1",
          "decimals": 18,
          "ids": {
            "id": "272547899416482196831721420898811311297",
          },
          "key": "vfil",
          "min": undefined,
          "originSymbol": "vFIL",
          "symbol": "xcvFIL",
        },
        "vglmr" => _ChainAsset {
          "address": "0xFfFfFFff99dABE1a8De0EA22bAa6FD48fdE96F6c",
          "decimals": 18,
          "ids": {
            "id": "204507659831918931608354793288110796652",
          },
          "key": "vglmr",
          "min": undefined,
          "originSymbol": "vGLMR",
          "symbol": "xcvGLMR",
        },
        "vmanta" => _ChainAsset {
          "address": "0xFFfFFfFfdA2a05FB50e7ae99275F4341AEd43379",
          "decimals": 18,
          "ids": {
            "id": "289989900872525819559124583375550296953",
          },
          "key": "vmanta",
          "min": undefined,
          "originSymbol": "vMANTA",
          "symbol": "xcvMANTA",
        },
        "wbtc" => _ChainAsset {
          "address": "0xE57eBd2d67B462E9926e04a8e33f01cD0D64346D",
          "decimals": 8,
          "ids": {
            "palletInstance": 110,
          },
          "key": "wbtc",
          "min": undefined,
          "originSymbol": "WBTC",
          "symbol": undefined,
        },
        "weth" => _ChainAsset {
          "address": "0xab3f0245B83feB11d15AAffeFD7AD465a59817eD",
          "decimals": 18,
          "ids": {
            "palletInstance": 110,
          },
          "key": "weth",
          "min": undefined,
          "originSymbol": "WETH",
          "symbol": undefined,
        },
        "ztg" => _ChainAsset {
          "address": "0xFFFFfffF71815ab6142E0E20c7259126C6B40612",
          "decimals": 10,
          "ids": {
            "id": "150874409661081770150564009349448205842",
          },
          "key": "ztg",
          "min": undefined,
          "originSymbol": "ZTG",
          "symbol": "xcZTG",
        },
        "pink" => _ChainAsset {
          "address": "0xfFfFFfFf30478fAFBE935e466da114E14fB3563d",
          "decimals": 10,
          "ids": {
            "id": "64174511183114006009298114091987195453",
          },
          "key": "pink",
          "min": undefined,
          "originSymbol": "PINK",
          "symbol": "xcPINK",
        },
        "stink" => _ChainAsset {
          "address": "0xFffFffFf54c556bD1d0F64ec6c78f1B477525E56",
          "decimals": 10,
          "ids": {
            "id": "112679793397406599376365943185137098326",
          },
          "key": "stink",
          "min": undefined,
          "originSymbol": "STINK",
          "symbol": "xcSTINK",
        },
        "apillon" => _ChainAsset {
          "address": "0xFfFFfFfF8A9736B44EbF188972725bED67BF694E",
          "decimals": 18,
          "ids": {
            "id": "184218609779515850660274730699350567246",
          },
          "key": "apillon",
          "min": undefined,
          "originSymbol": "NCTR",
          "symbol": "xcNCTR",
        },
        "wifd" => _ChainAsset {
          "address": "0xfffffffF2e1D1ac9eA1686255bEfe995B31abc96",
          "decimals": 10,
          "ids": {
            "id": "61295607754960722617854661686514597014",
          },
          "key": "wifd",
          "min": undefined,
          "originSymbol": "WIFD",
          "symbol": "xcWIFD",
        },
        "wbtce" => _ChainAsset {
          "address": "0xfFffFFFf1B4Bb1ac5749F73D866FfC91a3432c47",
          "decimals": 8,
          "ids": {
            "id": "36282181791341254438422467838694599751",
          },
          "key": "wbtce",
          "min": undefined,
          "originSymbol": "WBTC.e",
          "symbol": undefined,
        },
        "wethe" => _ChainAsset {
          "address": "0xFFffFFfF86829AFE1521ad2296719Df3acE8DEd7",
          "decimals": 18,
          "ids": {
            "id": "178794693648360392906933130845919698647",
          },
          "key": "wethe",
          "min": undefined,
          "originSymbol": "WETH.e",
          "symbol": undefined,
        },
        "wstethe" => _ChainAsset {
          "address": "0xfFFFFFFf5d5Deb44bf7278dEE5381Beb24CB6573",
          "decimals": 18,
          "ids": {
            "id": "124105859028862849477017063633156007283",
          },
          "key": "wstethe",
          "min": undefined,
          "originSymbol": "wstETH.e",
          "symbol": undefined,
        },
        "laos" => _ChainAsset {
          "address": "0xfffFFffFdd704e8e824a5EEc47de88f5B9e13588",
          "decimals": 18,
          "ids": {
            "id": "294342517635293430510451841925413680520",
          },
          "key": "laos",
          "min": undefined,
          "originSymbol": "LAOS",
          "symbol": "xcLAOS",
        },
        "eurc" => _ChainAsset {
          "address": "0xFfFfffFfa608Ec1332131289cBD8A97a0bB3D90F",
          "decimals": 12,
          "ids": {
            "id": "220698173844663170714431919474506717455",
          },
          "key": "eurc",
          "min": undefined,
          "originSymbol": "EURC",
          "symbol": "xcEURC.s",
        },
        "movr" => _ChainAsset {
          "address": "0xFfffFffF54c47F43713fd9211724362697f1a302",
          "decimals": 18,
          "ids": {
            "id": 112675423039561305557350799263187182338n,
          },
          "key": "movr",
          "min": undefined,
          "originSymbol": "MOVR",
          "symbol": "MOVR.mr",
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "polkadot",
      "explorer": {
        "base": "https://moonbeam.moonscan.io",
        "txPath": "/tx",
      },
      "genesisHash": "0xfe58ea77779b7abda7da4ec526d14db9b1e9cd40a217c34892af80a9b332b76d",
      "id": 1284,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": false,
      "key": "moonbeam",
      "name": "Moonbeam",
      "parachainId": 2004,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonbeam.network",
      "ss58Format": 1284,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": {
        "name": "Moonbeam",
      },
      "ws": [
        "wss://wss.api.moonbeam.network",
      ],
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 26873707500000000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "palletInstance": 110,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "USDC",
    },
    "sovereignAccountBalances": undefined,
  },
  "getEstimate": [Function],
  "max": _AssetAmount {
    "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
    "amount": 0n,
    "decimals": 6,
    "ids": {
      "id": 210223998887087232417477484708341610477n,
    },
    "key": "usdcwh",
    "min": undefined,
    "originSymbol": "USDC.Wh",
    "symbol": "whUSDC.mb",
  },
  "min": _AssetAmount {
    "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
    "amount": 0n,
    "decimals": 6,
    "ids": {
      "palletInstance": 110,
    },
    "key": "usdcwh",
    "min": undefined,
    "originSymbol": "USDC.Wh",
    "symbol": "USDC",
  },
  "source": {
    "balance": _AssetAmount {
      "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "id": 210223998887087232417477484708341610477n,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "whUSDC.mb",
    },
    "chain": _EvmParachain {
      "assets": Map {
        "aseed" => _ChainAsset {
          "address": "0xFfFffFFfa1B026a00FbAA67c86D5d1d5BF8D8228",
          "decimals": 12,
          "ids": {
            "id": "214920334981412447805621250067209749032",
          },
          "key": "aseed",
          "min": undefined,
          "originSymbol": "aSEED",
          "symbol": undefined,
        },
        "bnc" => _ChainAsset {
          "address": "0xFFfFFfFFF075423be54811EcB478e911F22dDe7D",
          "decimals": 12,
          "ids": {
            "id": "319623561105283008236062145480775032445",
          },
          "key": "bnc",
          "min": undefined,
          "originSymbol": "BNC",
          "symbol": "xcBNC",
        },
        "csm" => _ChainAsset {
          "address": "0xffFfFFFf519811215E05eFA24830Eebe9c43aCD7",
          "decimals": 12,
          "ids": {
            "id": "108457044225666871745333730479173774551",
          },
          "key": "csm",
          "min": undefined,
          "originSymbol": "CSM",
          "symbol": "xcCSM",
        },
        "kar" => _ChainAsset {
          "address": "0xFfFFFFfF08220AD2E6e157f26eD8bD22A336A0A5",
          "decimals": 12,
          "ids": {
            "id": "10810581592933651521121702237638664357",
          },
          "key": "kar",
          "min": undefined,
          "originSymbol": "KAR",
          "symbol": "xcKAR",
        },
        "kbtc" => _ChainAsset {
          "address": "0xFFFfFfFfF6E528AD57184579beeE00c5d5e646F0",
          "decimals": 8,
          "ids": {
            "id": "328179947973504579459046439826496046832",
          },
          "key": "kbtc",
          "min": undefined,
          "originSymbol": "KBTC",
          "symbol": "xcKBTC",
        },
        "kint" => _ChainAsset {
          "address": "0xfffFFFFF83F4f317d3cbF6EC6250AeC3697b3fF2",
          "decimals": 12,
          "ids": {
            "id": "175400718394635817552109270754364440562",
          },
          "key": "kint",
          "min": undefined,
          "originSymbol": "KINT",
          "symbol": "xcKINT",
        },
        "ksm" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 12,
          "ids": {
            "id": "42259045809535163221576417993425387648",
          },
          "key": "ksm",
          "min": undefined,
          "originSymbol": "KSM",
          "symbol": "xcKSM",
        },
        "lit" => _ChainAsset {
          "address": "0xfffFFfFF31103d490325BB0a8E40eF62e2F614C0",
          "decimals": 12,
          "ids": {
            "id": "65216491554813189869575508812319036608",
          },
          "key": "lit",
          "min": undefined,
          "originSymbol": "LIT",
          "symbol": "xcLIT",
        },
        "movr" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 10,
          },
          "key": "movr",
          "min": 10000000000000000n,
          "originSymbol": "MOVR",
          "symbol": undefined,
        },
        "pha" => _ChainAsset {
          "address": "0xffFfFFff8E6b63d9e447B6d4C45BDA8AF9dc9603",
          "decimals": 12,
          "ids": {
            "id": "189307976387032586987344677431204943363",
          },
          "key": "pha",
          "min": undefined,
          "originSymbol": "PHA",
          "symbol": "xcPHA",
        },
        "pica" => _ChainAsset {
          "address": "0xFffFfFFf7dD9B9C60ac83e49D7E3E1f7A1370aD2",
          "decimals": 12,
          "ids": {
            "id": "167283995827706324502761431814209211090",
          },
          "key": "pica",
          "min": undefined,
          "originSymbol": "PICA",
          "symbol": "xcPICA",
        },
        "rmrk" => _ChainAsset {
          "address": "0xffffffFF893264794d9d57E1E0E21E0042aF5A0A",
          "decimals": 10,
          "ids": {
            "id": "182365888117048807484804376330534607370",
          },
          "key": "rmrk",
          "min": undefined,
          "originSymbol": "RMRK",
          "symbol": "xcRMRK",
        },
        "sdn" => _ChainAsset {
          "address": "0xFFFfffFF0Ca324C842330521525E7De111F38972",
          "decimals": 18,
          "ids": {
            "id": "16797826370226091782818345603793389938",
          },
          "key": "sdn",
          "min": undefined,
          "originSymbol": "SDN",
          "symbol": "xcSDN",
        },
        "teer" => _ChainAsset {
          "address": "0xFfFfffFf4F0CD46769550E5938F6beE2F5d4ef1e",
          "decimals": 12,
          "ids": {
            "id": "105075627293246237499203909093923548958",
          },
          "key": "teer",
          "min": undefined,
          "originSymbol": "TEER",
          "symbol": "xcTEER",
        },
        "tnkr" => _ChainAsset {
          "address": "0xfFFfFffF683474B842852111cc31d470bD8f5081",
          "decimals": 12,
          "ids": {
            "id": "138512078356357941985706694377215053953",
          },
          "key": "tnkr",
          "min": undefined,
          "originSymbol": "TNKR",
          "symbol": "xcTNKR",
        },
        "tur" => _ChainAsset {
          "address": "0xfFffffFf6448d0746f2a66342B67ef9CAf89478E",
          "decimals": 10,
          "ids": {
            "id": "133300872918374599700079037156071917454",
          },
          "key": "tur",
          "min": undefined,
          "originSymbol": "TUR",
          "symbol": "xcTUR",
        },
        "usdtksm" => _ChainAsset {
          "address": "0xFFFFFFfFea09FB06d082fd1275CD48b191cbCD1d",
          "decimals": 6,
          "ids": {
            "id": "311091173110107856861649819128533077277",
          },
          "key": "usdtksm",
          "min": undefined,
          "originSymbol": "USDT",
          "symbol": "xcUSDT",
        },
        "xrt" => _ChainAsset {
          "address": "0xFffFFffF51470Dca3dbe535bD2880a9CcDBc6Bd9",
          "decimals": 9,
          "ids": {
            "id": "108036400430056508975016746969135344601",
          },
          "key": "xrt",
          "min": undefined,
          "originSymbol": "XRT",
          "symbol": "xcXRT",
        },
        "vbnc" => _ChainAsset {
          "address": "0xFFffffff3646A00f78caDf8883c5A2791BfCDdc4",
          "decimals": 12,
          "ids": {
            "id": "72145018963825376852137222787619937732",
          },
          "key": "vbnc",
          "min": undefined,
          "originSymbol": "vBNC",
          "symbol": "xcvBNC",
        },
        "vksm" => _ChainAsset {
          "address": "0xFFffffFFC6DEec7Fc8B11A2C8ddE9a59F8c62EFe",
          "decimals": 12,
          "ids": {
            "id": "264344629840762281112027368930249420542",
          },
          "key": "vksm",
          "min": undefined,
          "originSymbol": "vKSM",
          "symbol": "xcvKSM",
        },
        "vmovr" => _ChainAsset {
          "address": "0xfFfffFfF98e37bF6a393504b5aDC5B53B4D0ba11",
          "decimals": 18,
          "ids": {
            "id": "203223821023327994093278529517083736593",
          },
          "key": "vmovr",
          "min": undefined,
          "originSymbol": "vMOVR",
          "symbol": "xcvMOVR",
        },
        "glmr" => _ChainAsset {
          "address": "0xFfFffFff1a49463978f19dfD6983f2fa1885C254",
          "decimals": 18,
          "ids": {
            "id": 34940389883188672429634411751708934740n,
          },
          "key": "glmr",
          "min": undefined,
          "originSymbol": "GLMR",
          "symbol": "GLMR.mb",
        },
        "usdc" => _ChainAsset {
          "address": "0xFFFFFFfF2215880E56fe63a96E54E073757C3092",
          "decimals": 6,
          "ids": {
            "id": 45305549634539991528356533909445161106n,
          },
          "key": "usdc",
          "min": undefined,
          "originSymbol": "USDC",
          "symbol": "xcUSDC.mb",
        },
        "usdcwh" => _ChainAsset {
          "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
          "decimals": 6,
          "ids": {
            "id": 210223998887087232417477484708341610477n,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": "whUSDC.mb",
        },
        "usdt" => _ChainAsset {
          "address": "0xFFFFFFFFc70260a3bf46A91cF87B6F5e6Abba712",
          "decimals": 6,
          "ids": {
            "id": 264528715839624829046161791069655377682n,
          },
          "key": "usdt",
          "min": undefined,
          "originSymbol": "USDT",
          "symbol": "xcUSDT.mb",
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": {
        "Batch": "0x0000000000000000000000000000000000000808",
        "XcmPrecompile": "0x000000000000000000000000000000000000081A",
        "XcmUtils": "0x000000000000000000000000000000000000080C",
      },
      "ecosystem": "kusama",
      "explorer": undefined,
      "genesisHash": "0x401a1f9dca3da46f5c4091016c8a2f26dcea05865116b286f60f668207d1474b",
      "id": 1285,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": false,
      "key": "moonriver",
      "name": "Moonriver",
      "parachainId": 2023,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonriver.moonbeam.network",
      "ss58Format": 1285,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": undefined,
      "ws": [
        "wss://wss.api.moonriver.moonbeam.network",
      ],
    },
    "destinationFee": _AssetAmount {
      "address": "0xFfFffFff1a49463978f19dfD6983f2fa1885C254",
      "amount": 26873707500000000n,
      "decimals": 18,
      "ids": {
        "id": 34940389883188672429634411751708934740n,
      },
      "key": "glmr",
      "min": undefined,
      "originSymbol": "GLMR",
      "symbol": "GLMR.mb",
    },
    "destinationFeeBalance": _AssetAmount {
      "address": "0xFfFffFff1a49463978f19dfD6983f2fa1885C254",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "id": 34940389883188672429634411751708934740n,
      },
      "key": "glmr",
      "min": undefined,
      "originSymbol": "GLMR",
      "symbol": "GLMR.mb",
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "movr",
      "min": 10000000000000000n,
      "originSymbol": "MOVR",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "movr",
      "min": 10000000000000000n,
      "originSymbol": "MOVR",
      "symbol": undefined,
    },
    "feeBalance": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 1000000000000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "movr",
      "min": 10000000000000000n,
      "originSymbol": "MOVR",
      "symbol": undefined,
    },
    "max": _AssetAmount {
      "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "id": 210223998887087232417477484708341610477n,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "whUSDC.mb",
    },
    "min": _AssetAmount {
      "address": "0xFfFfffff9E27Ab60FADFd33ABf71B39A7445f7eD",
      "amount": 0n,
      "decimals": 6,
      "ids": {
        "id": 210223998887087232417477484708341610477n,
      },
      "key": "usdcwh",
      "min": undefined,
      "originSymbol": "USDC.Wh",
      "symbol": "whUSDC.mb",
    },
  },
  "transfer": [Function],
}
`;
